<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    android:clipChildren="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="229dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtube_player_view"
            android:layout_width="350sp"
            android:layout_height="205sp"
            app:videoId="uj3nFNIV2jY"
            android:layout_marginTop="5sp"
            app:autoPlay="false"
            app:showFullScreenButton="false"
            tools:layout_editor_absoluteX="0sp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/logo" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/youtube_player_view" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="start"
            android:textColor="@color/design_default_color_primary"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@id/profile_image"
            app:layout_constraintEnd_toStartOf="@+id/likes_count"
            app:layout_constraintStart_toEndOf="@+id/profile_image"
            app:layout_constraintTop_toTopOf="@id/profile_image"
            android:text="@string/tram_nguyen" />

        <TextView
            android:id="@+id/likes_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/_3"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_heart"
            app:layout_constraintBottom_toBottomOf="@+id/profile_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/profile_image"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:id="@+id/description"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image"
            android:text="@string/you_will_kill_it_today"/>
        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtube_player_view3"
            android:layout_width="350sp"
            android:layout_height="205sp"
            app:videoId="Msl2fl3h59I"
            android:layout_marginTop="20sp"
            app:autoPlay="false"
            app:showFullScreenButton="false"
            tools:layout_editor_absoluteX="0sp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description2"
            android:src="@drawable/logo" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/youtube_player_view3" />

        <TextView
            android:id="@+id/user_name3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="start"
            android:textColor="@color/design_default_color_primary"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@id/profile_image3"
            app:layout_constraintEnd_toStartOf="@+id/likes_count3"
            app:layout_constraintStart_toEndOf="@+id/profile_image3"
            app:layout_constraintTop_toTopOf="@id/profile_image3"
            android:text="@string/tram_nguyen"/>

        <TextView
            android:id="@+id/likes_count3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/_4"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_heart"
            app:layout_constraintBottom_toBottomOf="@+id/profile_image3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/profile_image3"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:id="@+id/description3"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image3"
            android:text="@string/have_a_great_day"/>
        <TextView
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:id="@+id/description4"
            android:textSize="60sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image3"
            android:text=""/>
        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtube_player_view2"
            android:layout_width="350sp"
            android:layout_height="205sp"
            app:videoId="mk48xRzuNvA"
            android:layout_marginTop="20sp"
            app:autoPlay="false"
            app:showFullScreenButton="false"
            tools:layout_editor_absoluteX="0sp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description"
            android:src="@drawable/logo" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/youtube_player_view2" />

        <TextView
            android:id="@+id/user_name2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="start"
            android:textColor="@color/design_default_color_primary"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@id/profile_image2"
            app:layout_constraintEnd_toStartOf="@+id/likes_count2"
            app:layout_constraintStart_toEndOf="@+id/profile_image2"
            app:layout_constraintTop_toTopOf="@id/profile_image2"
            android:text="@string/tram_nguyen" />

        <TextView
            android:id="@+id/likes_count2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/_2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_heart"
            app:layout_constraintBottom_toBottomOf="@+id/profile_image2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/profile_image2"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:id="@+id/description2"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image2"
            android:text="@string/you_are_awesome"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


</androidx.cardview.widget.CardView>
